--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(LLVM_LINK_COMPONENTS
 add_clang_library(clangStaticAnalyzerCheckers
   _MPI_Checker/MPISchemaChecker.cpp
   _MPI_Checker/MPISchemaCheckerAST.cpp
+  _MPI_Checker/Utility.cpp
   ReactorChecker.cpp
   SimpleStreamChecker.cpp
   AllocationDiagnostics.cpp
