renamed checker file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(LLVM_LINK_COMPONENTS
   )
 
 add_clang_library(clangStaticAnalyzerCheckers
-  _MPI_Checker/MPISchemaChecker.cpp
+  _MPI_Checker/MPIChecker.cpp
   _MPI_Checker/Utility.cpp
   _MPI_Checker/SupportingVisitors.cpp
   ReactorChecker.cpp
