refactored classes to files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(LLVM_LINK_COMPONENTS
 
 add_clang_library(clangStaticAnalyzerCheckers
   _MPI_Checker/MPIChecker.cpp
+  _MPI_Checker/MPIBugReporter.cpp
+  _MPI_Checker/MPIFunctionClassifier.cpp
   _MPI_Checker/Utility.cpp
   _MPI_Checker/SupportingVisitors.cpp
   ReactorChecker.cpp
